[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/PlantSelection.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/HUD.gd" type="Script" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlantSelection" parent="BuildUI" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -106.0
margin_top = -50.0
margin_right = 106.0
margin_bottom = 0.0

[node name="SelectionUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
